# cached-rag

./: .env.sample  .gitignore  README.md  app.py  cleanup.py  mongo_byte_store.py  pyproject.toml
data/: paul_graham_short.txt
redis_storage/: dump.rdb
