[project]
name = "cached-rag"
version = "0.1.0"
description = "Session 15 - Open Source Endpoints"
readme = "README.md"
requires-python = ">=3.09"
dependencies = [
    "chainlit==2.2.1",
    "huggingface-hub==0.27.0",
    "langchain-huggingface==0.1.2",
    "langchain==0.3.19",
    "langchain-community==0.3.18",
    "langsmith==0.3.11",
    "python-dotenv==1.0.1",
    "langchain-openai==0.3.7",
    "langchain-text-splitters==0.3.6",
    "websockets>=15.0",
    "langchain-together>=0.3.0",
    "qdrant-client>=1.14.2",
    "langchain-qdrant>=0.2.0",
    "langchain-mongodb>=0.6.2",
]
